build/testuserdir/var/cache/index/s1/errors/1/vendor/phpunit/phpunit/tests/TextUI/testdox-xml.phpt.warn
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	%
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'by'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Sebastian'
WARNING:14:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'Bergmann'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	'.'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	integer '7'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	(
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	)
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'version'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	=
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	identifier 'encoding'
WARNING:16:POSSIBLE Syntax Error (check preceding valid syntax error)\n unexpected\d	=
